--- a/GroupProject/Views/Shared/_Layout.cshtml
+++ b/GroupProject/Views/Shared/_Layout.cshtml
@@ -22,6 +22,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("History", "Index", "History", new { area = "" }, null)</li>
+                    
                 </ul>
             </div>
         </div>
