Add css and Create, Edit page

--- a/GroupProject/WebMVC/Views/Admin.cshtml
+++ b/GroupProject/WebMVC/Views/Admin.cshtml
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div>
+        <p>@Html.ActionLink("Add New Product", "~/Bag/Create")</p>
         Category:
         <select>
             @foreach (BagCategory bagCate in ViewBag.Categories)
@@ -28,16 +29,20 @@
                     <th>Name</th>
                     <th>Size</th>
                     <th>Price</th>
+                    <th>Delete</th>
+                    <th>Update</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach(Bag bag in ViewBag.Bags)
                 {
-                    <tr>
-                        <td>@bag.BagName</td>
-                        <td>@bag.size</td>
-                        <td>@bag.Price</td>
-                    </tr>
+                <tr>
+                    <td>@bag.BagName</td>
+                    <td>@bag.size</td>
+                    <td>@bag.Price</td>
+                    <td>@Html.ActionLink("Delete", "~/Bag/Delete", new { BagID = bag.BagID })</td>
+                    <td>@Html.ActionLink("Edit", "~/Bag/Edit", new { BagID = bag.BagID })</td>
+                </tr>
                 }
             </tbody>
         </table>
