--- a/GroupProject/WebMVC/Views/CreateOrEdit.cshtml
+++ b/GroupProject/WebMVC/Views/CreateOrEdit.cshtml
@@ -1,1 +1,83 @@
 ﻿
+<div class="row">
+    <div class="form-row">
+        <div class="form-group col-md-4">
+        </div>
+        <div class="center">
+            <div class="form-group col-md-4">
+                <label for="inputContent">Question Content</label>
+                <textarea class="form-control" id="inputContent" name="txtQuestionContent"></textarea>
+                <font color="red">
+
+                </font>
+            </div>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-4">
+        </div>
+        <div class="center">
+            <div class="form-group col-md-4">
+                <label for="inputAnswer1">Answer 1</label>
+                <textarea class="form-control" id="inputAnswer1" name="txtAnswer1"></textarea>
+                <font color="red">
+                </font>
+            </div>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-4">
+        </div>
+        <div class="center">
+            <div class="form-group col-md-4">
+                <label for="inputAnswer2">Answer 2</label>
+                <textarea class="form-control" id="inputAnswer2" name="txtAnswer2"></textarea>
+                <font color="red">
+                </font>
+            </div>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-4">
+        </div>
+        <div class="center">
+            <div class="form-group col-md-4">
+                <label for="inputAnswer3">Answer 3</label>
+                <textarea class="form-control" id="inputAnswer3" name="txtAnswer3"></textarea>
+                <font color="red">
+                </font>
+            </div>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-4">
+        </div>
+        <div class="center">
+            <div class="form-group col-md-4">
+                <label for="inputCorrectAnswer">Correct Answer</label>
+                <textarea class="form-control" id="inputCorrectAnswer" name="txtCorrectAnswer"></textarea>
+                <font color="red">
+
+                </font>
+            </div>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-4">
+        </div>
+        <div class="center">
+            <div class="form-group col-md-4">
+                <label for="inputSubject">Subject</label><br>
+                <select name="cboSubjects" id="inputSubject" class="custom-select">
+                    <c:if test="">
+                        <c:forEach items="" var="subject">
+                            <option value=""></option>
+                        </c:forEach>
+                    </c:if>
+                </select>
+                <font color="red">
+                </font>
+            </div>
+        </div>
+    </div>
+</div>
