--- a/GroupProject/WebMVC/Views/Create.cshtml
+++ b/GroupProject/WebMVC/Views/Create.cshtml
@@ -4,20 +4,30 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Create</title>
-    <link rel="stylesheet" type="text/css" href="my.css">
+    <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="~/css/style_1.css">
 </head>
 <body>
+    @Html.Partial("~/Views/AdminHeader.cshtml")
     <div class="container" style="margin-top: 50px;">
         <div class="center">
             <h1>Create Question Form</h1>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col text-center">
-                    <input type="submit" class="btn btn-large btn-primary" value="Create" style="margin-top: 30px;" />
+        @using (Html.BeginForm())
+        {
+            @Html.Partial("~/Views/CreateOrEdit.cshtml")
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <input type="submit" class="btn btn-large btn-primary" value="Create" style="margin-top: 30px;" />
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
+        }
+
+    </div>
 </body>
 </html>
