--- a/GroupProject/WebMVC/Views/Edit.cshtml
+++ b/GroupProject/WebMVC/Views/Edit.cshtml
@@ -16,13 +16,13 @@
         <div class="center">
             <h1>Update Bag</h1>
         </div>
-        @using (Html.BeginForm("Edit", "Bag", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("Update", "Bag", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.Partial("~/Views/CreateOrEdit.cshtml")
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
-                        <input type="submit" class="btn btn-large btn-primary" value="Create" style="margin-top: 30px;" />
+                        <input type="submit" class="btn btn-large btn-primary" value="Update" style="margin-top: 30px;" />
                     </div>
                 </div>
             </div>
